config, security: implement a logining, add entity, auth, user details.
Implement logining functionality.
Add entities, auth and user details implementation.